Use docker-compose sonos api

--- a/Src/appsettings.json
+++ b/Src/appsettings.json
@@ -14,7 +14,7 @@
     "Unit": ""
   },
   "SonosOptions": {
-    "ApiUrl": ""
+    "ApiUrl": "http://sonosApi:5005/"
   },
   "NotificationOptions": {
     "AccessToken": "",
