--- a/Src/appsettings.json
+++ b/Src/appsettings.json
@@ -16,6 +16,9 @@
   "SonosOptions": {
     "ApiUrl": "http://sonosApi:5005/"
   },
+  "CastOptions": {
+    "ApiUrl": "http://castApi:3000/"
+  },
   "NotificationOptions": {
     "AccessToken": "",
     "Channels": [
