--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,16 @@ services:
             - ASPNETCORE_ENVIRONMENT=Development
         ports:
             - "8080:80"
-        networks:
-            - sonos
         depends_on:
             - sonosApi
     sonosApi:
         image: "chrisns/docker-node-sonos-http-api"
-        networks:
-            - sonos
+        network_mode: "host"
         volumes:
             - ./sonosApi/settings:/app/settings
             - ./sonosApi/presets:/app/presets
             - ./sonosApi/cache:/app/cache
             - ./sonosApi/clips:/app/static/clips
-
-networks:
-    sonos:
+    castApi:
+        image: "breadlysm/cast-web-api"
+        network_mode: "host"
